--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -12,7 +12,7 @@
         />
         <div
           *ngIf="
-            (name.touched || message) &&
+            (name.dirty || message) &&
             name.invalid
           "
           class="msgerror"
@@ -21,7 +21,7 @@
             Wine Name is required
           </div>
           <div *ngIf="name.errors.invalidName">
-          Wine Name incorrect {{name.errors.invalidName}}
+          Wine Name incorrect. {{name.errors.invalidName}}
         </div>
 
         </div>
