--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -12,16 +12,16 @@
         />
         <div
           *ngIf="
-            (name.dirty || message) &&
-            name.invalid
+            (name?.dirty || message) &&
+            name?.invalid
           "
           class="msgerror"
         >
-          <div *ngIf="name.errors.required">
+          <div *ngIf="name?.errors?.['required']">
             Wine Name is required
           </div>
-          <div *ngIf="name.errors.invalidName">
-          Wine Name incorrect. {{name.errors.invalidName}}
+          <div *ngIf="name?.errors?.['invalidName']">
+          Wine Name incorrect. {{name?.errors?.['invalidName']}}
         </div>
 
         </div>
