--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -60,8 +60,8 @@
         />
         <div
           *ngIf="
-            (imageUrl.dirty || message) &&
-            imageUrl.invalid
+            (imageUrl?.dirty || message) &&
+            imageUrl?.invalid
           "
           class="msgerror"
         >
