--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -20,8 +20,9 @@
           <div *ngIf="name?.errors?.['required']">
             Wine Name is required
           </div>
-          <div *ngIf="name?.errors?.['invalidName']">
+          <div *ngIf="name?.hasError('invalidName')">
           Wine Name incorrect. {{name?.errors?.['invalidName']}}
+          Wine Name incorrect. {{name?.getError('invalidName')}}
         </div>
 
         </div>
@@ -42,10 +43,10 @@
           "
           class="msgerror"
         >
-          <div *ngIf="price?.errors?.hasError('required')">
+          <div *ngIf="price?.hasError('required')">
             Wine Price is required
           </div>
-          <div *ngIf="price?.errors?.hasError('min')">
+          <div *ngIf="price?.hasError('min')">
           Wine Price must be > 1
         </div> 
         </div>
